# ChangeLog for media-video/mpv
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  fix USE quvi

  04 Jul 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild, metadata.xml:
  upstream added libguess support

*mpv-0_p20130615 (15 Jun 2013)

  15 Jun 2013; Nikoli <nikoli@lavabit.com> -mpv-0_p20121201.ebuild,
  -mpv-0_p20130112.ebuild, +mpv-0_p20130615.ebuild:
  new snapshot, rm old

  14 Jun 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  update wayland deps

  20 May 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild, metadata.xml:
  add vf-dlopen use flag, update

  28 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  add USE wayland, xkbcommon is in portage

  27 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  eapi5, cosmetics

  16 Apr 2013; Nikoli <nikoli@lavabit.com> mpv-0_p20130112.ebuild,
  mpv-9999.ebuild:
  update cdio dep

  15 Mar 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  update libav dep

  11 Mar 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  disable wayland

  08 Feb 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  upstream removed *bsdbt848 from configure

  13 Jan 2013; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  --datadir= option was removed

*mpv-0_p20130112 (13 Jan 2013)

  13 Jan 2013; Nikoli <nikoli@lavabit.com> +mpv-0_p20130112.ebuild,
  mpv-9999.ebuild:
  new snapshot, disable sdl

  26 Dec 2012; Nikoli <nikoli@lavabit.com> mpv-0_p20121201.ebuild,
  mpv-9999.ebuild:
  verbose build, bgo#448196

  04 Dec 2012; Nikoli <nikoli@lavabit.com> mpv-9999.ebuild:
  giflib and libpng support was removed

*mpv-0_p20121201 (01 Dec 2012)

  01 Dec 2012; Nikoli <nikoli@lavabit.com> +mpv-0_p20121201.ebuild,
  mpv-9999.ebuild:
  add snapshot, update openal dep

*mpv-9999 (14 Nov 2012)

  14 Nov 2012; Nikoli <nikoli@lavabit.com> +mpv-9999.ebuild, +metadata.xml:
  Initial ebuild. If it fails to build, use "pu" git branch.
